--- a/app/src/main/res/layout/activity_upc_and_carton.xml
+++ b/app/src/main/res/layout/activity_upc_and_carton.xml
@@ -36,7 +36,7 @@
         android:background="@drawable/constraintlayout_bg"
         android:elevation="20dp"
         android:ems="10"
-        android:inputType="none"
+        android:inputType="text"
         android:padding="10dp"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +65,7 @@
         android:background="@drawable/constraintlayout_bg"
         android:elevation="20dp"
         android:ems="10"
-        android:inputType="none"
+        android:inputType="text"
         android:padding="10dp"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
