--- a/app/src/main/res/layout/activity_solid_upc.xml
+++ b/app/src/main/res/layout/activity_solid_upc.xml
@@ -8,7 +8,10 @@
 
     <include
         android:id="@+id/include9"
-        layout="@layout/toolbar"/>
+        layout="@layout/toolbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
