--- a/app/src/main/res/layout/activity_po_pc_upc.xml
+++ b/app/src/main/res/layout/activity_po_pc_upc.xml
@@ -138,17 +138,19 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_clear"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="25dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         android:layout_weight="1"
         android:background="@drawable/btn_bg"
         android:backgroundTint="#F44336"
         android:text="Clear"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
         app:layout_constraintEnd_toStartOf="@+id/btn_next"
-        app:layout_constraintStart_toEndOf="@+id/btn_back" />
+        app:layout_constraintStart_toEndOf="@+id/btn_back"
+        app:layout_constraintTop_toTopOf="@+id/btn_back" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_next"
