--- a/app/src/main/res/layout/activity_solid_po.xml
+++ b/app/src/main/res/layout/activity_solid_po.xml
@@ -73,17 +73,16 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
-<!--    Buttons...............................-->
+    <!--    Buttons...............................-->
 
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_back"
         android:layout_width="60sp"
         android:layout_height="60sp"
-        android:background="@drawable/back_button_bg"
         android:layout_marginStart="25dp"
         android:layout_marginBottom="25dp"
+        android:background="@drawable/back_button_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -99,17 +98,19 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_clear"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="25dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         android:layout_weight="1"
         android:background="@drawable/btn_bg"
         android:backgroundTint="#F44336"
         android:text="Clear"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
         app:layout_constraintEnd_toStartOf="@+id/btn_next"
-        app:layout_constraintStart_toEndOf="@+id/btn_back" />
+        app:layout_constraintStart_toEndOf="@+id/btn_back"
+        app:layout_constraintTop_toTopOf="@+id/btn_back" />
 
     <EditText
         android:id="@+id/edit_poNumber"
