--- a/app/src/main/res/layout/activity_solid_upc.xml
+++ b/app/src/main/res/layout/activity_solid_upc.xml
@@ -23,8 +23,8 @@
         android:background="@drawable/constraintlayout_bg"
         android:elevation="20dp"
         android:focusable="false"
-        android:padding="20sp"
         android:focusedByDefault="false"
+        android:padding="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include9">
@@ -116,15 +116,15 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-<!--    Buttons..................-->
+    <!--    Buttons..................-->
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_back"
         android:layout_width="60sp"
         android:layout_height="60sp"
-        android:background="@drawable/back_button_bg"
         android:layout_marginStart="25dp"
         android:layout_marginBottom="25dp"
+        android:background="@drawable/back_button_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -140,17 +140,19 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_clear"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="25dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         android:layout_weight="1"
         android:background="@drawable/btn_bg"
         android:backgroundTint="#F44336"
         android:text="Clear"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
         app:layout_constraintEnd_toStartOf="@+id/btn_next"
-        app:layout_constraintStart_toEndOf="@+id/btn_back" />
+        app:layout_constraintStart_toEndOf="@+id/btn_back"
+        app:layout_constraintTop_toTopOf="@+id/btn_back" />
 
     <EditText
         android:id="@+id/edit_scanCarton"
@@ -161,10 +163,10 @@
         android:layout_marginEnd="20dp"
         android:background="@drawable/constraintlayout_bg"
         android:ems="10"
+        android:focusable="true"
         android:focusedByDefault="true"
         android:inputType="text"
         android:padding="10dp"
-        android:focusable="true"
 
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
@@ -209,9 +211,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
+        android:focusable="false"
         android:text="Scan Carton Number"
         android:textSize="16sp"
-        android:focusable="false"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
